@@ -25,6 +25,15 @@ import|;
 end_import
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -115,8 +124,7 @@ comment|// bit array.  Optimistically collect the first few docs in an array
 comment|// in case there are only a few.
 DECL|field|scratch
 specifier|final
-name|int
-index|[]
+name|ExpandingIntArray
 name|scratch
 decl_stmt|;
 DECL|method|DocSetCollector
@@ -168,10 +176,10 @@ operator|.
 name|scratch
 operator|=
 operator|new
-name|int
-index|[
+name|ExpandingIntArray
+argument_list|(
 name|smallSetSize
-index|]
+argument_list|)
 expr_stmt|;
 block|}
 annotation|@
@@ -202,17 +210,17 @@ if|if
 condition|(
 name|pos
 operator|<
-name|scratch
-operator|.
-name|length
+name|smallSetSize
 condition|)
 block|{
 name|scratch
-index|[
+operator|.
+name|add
+argument_list|(
 name|pos
-index|]
-operator|=
+argument_list|,
 name|doc
+argument_list|)
 expr_stmt|;
 block|}
 else|else
@@ -257,7 +265,8 @@ name|pos
 operator|<=
 name|scratch
 operator|.
-name|length
+name|size
+argument_list|()
 condition|)
 block|{
 comment|// assumes docs were collected in sorted order!
@@ -266,6 +275,9 @@ operator|new
 name|SortedIntDocSet
 argument_list|(
 name|scratch
+operator|.
+name|toArray
+argument_list|()
 argument_list|,
 name|pos
 argument_list|)
@@ -274,30 +286,11 @@ block|}
 else|else
 block|{
 comment|// set the bits for ids that were collected in the array
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
 name|scratch
 operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-name|bits
-operator|.
-name|set
+name|copyTo
 argument_list|(
-name|scratch
-index|[
-name|i
-index|]
+name|bits
 argument_list|)
 expr_stmt|;
 return|return
@@ -357,6 +350,429 @@ name|context
 operator|.
 name|docBase
 expr_stmt|;
+block|}
+DECL|class|ExpandingIntArray
+specifier|protected
+specifier|static
+class|class
+name|ExpandingIntArray
+block|{
+DECL|field|EMPTY
+specifier|private
+specifier|static
+specifier|final
+name|int
+index|[]
+name|EMPTY
+init|=
+operator|new
+name|int
+index|[
+literal|0
+index|]
+decl_stmt|;
+DECL|field|currentAddArray
+specifier|private
+name|int
+index|[]
+name|currentAddArray
+init|=
+literal|null
+decl_stmt|;
+DECL|field|indexForNextAddInCurrentAddArray
+specifier|private
+name|int
+name|indexForNextAddInCurrentAddArray
+init|=
+literal|0
+decl_stmt|;
+DECL|field|size
+specifier|private
+name|int
+name|size
+init|=
+literal|0
+decl_stmt|;
+DECL|field|smallSetSize
+specifier|private
+specifier|final
+name|int
+name|smallSetSize
+decl_stmt|;
+DECL|field|arrays
+specifier|private
+name|ArrayList
+argument_list|<
+name|int
+index|[]
+argument_list|>
+name|arrays
+decl_stmt|;
+DECL|method|ExpandingIntArray
+specifier|public
+name|ExpandingIntArray
+parameter_list|(
+name|int
+name|smallSetSize
+parameter_list|)
+block|{
+name|this
+operator|.
+name|smallSetSize
+operator|=
+name|smallSetSize
+expr_stmt|;
+name|this
+operator|.
+name|currentAddArray
+operator|=
+name|EMPTY
+expr_stmt|;
+block|}
+DECL|method|addNewArray
+specifier|private
+name|void
+name|addNewArray
+parameter_list|()
+block|{
+name|int
+name|arrSize
+init|=
+name|Math
+operator|.
+name|max
+argument_list|(
+literal|10
+argument_list|,
+name|currentAddArray
+operator|.
+name|length
+operator|<<
+literal|1
+argument_list|)
+decl_stmt|;
+name|arrSize
+operator|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|arrSize
+argument_list|,
+name|smallSetSize
+operator|-
+name|size
+argument_list|)
+expr_stmt|;
+comment|// max out at the smallSetSize
+name|this
+operator|.
+name|currentAddArray
+operator|=
+operator|new
+name|int
+index|[
+name|arrSize
+index|]
+expr_stmt|;
+if|if
+condition|(
+name|arrays
+operator|==
+literal|null
+condition|)
+block|{
+name|arrays
+operator|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+expr_stmt|;
+block|}
+name|arrays
+operator|.
+name|add
+argument_list|(
+name|this
+operator|.
+name|currentAddArray
+argument_list|)
+expr_stmt|;
+name|indexForNextAddInCurrentAddArray
+operator|=
+literal|0
+expr_stmt|;
+comment|// System.out.println("### ALLOCATED " + this + " " + arrSize + " smallSetSize="+smallSetSize + " left=" + (smallSetSize-size));
+block|}
+DECL|method|add
+specifier|public
+name|void
+name|add
+parameter_list|(
+name|int
+name|index
+parameter_list|,
+name|int
+name|value
+parameter_list|)
+block|{
+comment|// assert index == size; // only appending is supported
+if|if
+condition|(
+name|indexForNextAddInCurrentAddArray
+operator|>=
+name|currentAddArray
+operator|.
+name|length
+condition|)
+block|{
+name|addNewArray
+argument_list|()
+expr_stmt|;
+block|}
+name|currentAddArray
+index|[
+name|indexForNextAddInCurrentAddArray
+operator|++
+index|]
+operator|=
+name|value
+expr_stmt|;
+name|size
+operator|++
+expr_stmt|;
+block|}
+DECL|method|copyTo
+specifier|public
+name|void
+name|copyTo
+parameter_list|(
+name|FixedBitSet
+name|bits
+parameter_list|)
+block|{
+if|if
+condition|(
+name|size
+operator|>
+literal|0
+condition|)
+block|{
+name|int
+name|resultPos
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|arrays
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|int
+index|[]
+name|srcArray
+init|=
+name|arrays
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+name|int
+name|intsToCopy
+init|=
+operator|(
+name|i
+operator|<
+operator|(
+name|arrays
+operator|.
+name|size
+argument_list|()
+operator|-
+literal|1
+operator|)
+operator|)
+condition|?
+name|srcArray
+operator|.
+name|length
+else|:
+name|indexForNextAddInCurrentAddArray
+decl_stmt|;
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+name|intsToCopy
+condition|;
+name|j
+operator|++
+control|)
+block|{
+name|bits
+operator|.
+name|set
+argument_list|(
+name|srcArray
+index|[
+name|j
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+name|resultPos
+operator|+=
+name|intsToCopy
+expr_stmt|;
+block|}
+assert|assert
+name|resultPos
+operator|==
+name|size
+assert|;
+block|}
+block|}
+DECL|method|toArray
+specifier|public
+name|int
+index|[]
+name|toArray
+parameter_list|()
+block|{
+name|int
+index|[]
+name|result
+init|=
+operator|new
+name|int
+index|[
+name|size
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|size
+operator|>
+literal|0
+condition|)
+block|{
+name|int
+name|resultPos
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|arrays
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|int
+index|[]
+name|srcArray
+init|=
+name|arrays
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+name|int
+name|intsToCopy
+init|=
+operator|(
+name|i
+operator|<
+operator|(
+name|arrays
+operator|.
+name|size
+argument_list|()
+operator|-
+literal|1
+operator|)
+operator|)
+condition|?
+name|srcArray
+operator|.
+name|length
+else|:
+name|indexForNextAddInCurrentAddArray
+decl_stmt|;
+name|System
+operator|.
+name|arraycopy
+argument_list|(
+name|srcArray
+argument_list|,
+literal|0
+argument_list|,
+name|result
+argument_list|,
+name|resultPos
+argument_list|,
+name|intsToCopy
+argument_list|)
+expr_stmt|;
+name|resultPos
+operator|+=
+name|intsToCopy
+expr_stmt|;
+block|}
+assert|assert
+name|resultPos
+operator|==
+name|size
+assert|;
+block|}
+return|return
+name|result
+return|;
+block|}
+DECL|method|size
+specifier|public
+name|int
+name|size
+parameter_list|()
+block|{
+return|return
+name|size
+return|;
+block|}
 block|}
 block|}
 end_class
